# insomnizac-website

./: .eslintrc.cjs  .gitignore  Gemfile  Privacy_Policy  Privacy_Policy.html  README.md  debug.md  development.md  docker-compose.yml  package-lock.json  package.json  redis.sh  routes.txt  svelte.config.js  vite.config.ts
.github/workflows/: codeql-go.yml  codeql-ruby.yml  codeql.yml  docker-compose-push.yml
admin/: .gitignore  Dockerfile  Gemfile  README.md
admin/api/: Gemfile
admin/config/: credentials.yml.enc  routes.rb
admin/console/: Cargo.toml  Dockerfile  LICENSE-MIT  README.md  index.scss
admin/console/src/: app.rs  main.rs
admin/console/src/components/: edit_project_form.rs  mod.rs  project_panel.rs
admin/console/src/models/: account.rs  mod.rs  project.rs  rails_error.rs  skill.rs
admin/console/src/pages/: edit_project.rs  error.rs  home.rs  login.rs  mod.rs  projects.rs  routing.rs  signup.rs
admin/console/src/styles/: projects.scss
admin/console/src/utils/: auth.rs  http.rs  messaging.rs  mod.rs  state.rs  storage.rs
admin/db/: schema.rb
admin/google_auth/: google-api-auth.ts
admin/lib/: authentication.rb
admin/old_api/: README.md  debug.md
api/: Dockerfile  go.mod  go.sum  gqlgen.yml  package-lock.json  package.json  server.go
api/config/: config.go  settings.go
api/database/: db.go  filters.go  get.go  init.go  (+2 more)
config/: application.rb  cable.yml  routes.rb
db/: schema.rb
redis/: Dockerfile  redis.conf
website/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+235 files in other folders)
