[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
wasm-bindgen = "0.2.83"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
serde_json = "1.0.81"
serde = { version = "1.0.37", features = ["derive"]}
# js-sys = "0.3"
# web-sys = "0.3.58"